Fix hypergraph id typo

--- a/css/ob_hypergraph.css
+++ b/css/ob_hypergraph.css
@@ -59,7 +59,7 @@
     margin-right: 10px;
 }
 
-#hypergrah_name, #hypergrah_underline, #hypergrah_underline2 {
+#hypergraph_name, #hypergraph_underline, #hypergraph_underline2 {
     font-weight: bold;
     color: #2574a6;
     text-align: center; /* Center align the text */
